[tool.poetry]
name = "ml-tesla-mlperftiny"
version = "0.1.0"
description = ""
authors = ["Gert Dekkers <gert.dekkers@magics.tech>"]
readme = "README.md"
packages = []

[tool.poetry.dependencies]
python = ">3.8,<3.12"
tensorflow = "^2.12.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
